handle incoorect result for polygons

--- a/ui_OmgevingsAnalyseDlg.ui
+++ b/ui_OmgevingsAnalyseDlg.ui
@@ -159,7 +159,7 @@
         </sizepolicy>
        </property>
        <property name="text">
-        <string>Zoekstraal:</string>
+        <string>Maximale zoekstraal:</string>
        </property>
       </widget>
      </item>
